--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,16 +15,16 @@
 
                 <li class="nav-item ">
 
-                    <a class="nav-link " href="#"> Recibidos</a>
+                    <a class="nav-link " [ngClass]="{'active': router.url === '/mail/bandeja-entrada'}" href="index"> Recibidos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Enviados</a>
+                    <a class="nav-link " [ngClass]="{'active': router.url === '/mail/bandeja-enviados'}" href="mail/bandeja-enviados">Enviados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Archivados</a>
+                    <a class="nav-link " [ngClass]="{'active': router.url === '/mail/bandeja-archivados'}" href="#">Archivados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Papelera</a>
+                    <a class="nav-link" [ngClass]="{'active': router.url === '/mail/bandeja-papelera'}" href="#">Papelera</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
